Overhauled the Options and CommandLineOptions classes to prepare for non-CLI use